--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -157,48 +157,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ProductImage" translatesAutoresizingMaskIntoConstraints="NO" id="9xR-K8-uf1">
-                                <rect key="frame" x="87" y="144" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="T-Shirt" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vq5-I3-w6P">
-                                <rect key="frame" x="164" y="280" width="86" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oAv-pI-GrN">
-                                <rect key="frame" x="88" y="325" width="238" height="63"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Add To Cart"/>
-                                <connections>
-                                    <action selector="addToCartButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="wpQ-qK-0S1"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiK-SR-ICR">
-                                <rect key="frame" x="87" y="412" width="238" height="63"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Purchase"/>
-                                <connections>
-                                    <action selector="purchaseButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="ZGF-RD-AUi"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oL8-3x-dTc">
-                                <rect key="frame" x="87" y="500" width="238" height="63"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Send Custom Event"/>
-                                <connections>
-                                    <action selector="customEventButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="CaV-GA-xkL"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pId-os-gqS">
+                                <rect key="frame" x="36" y="152.5" width="342" height="556"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b6b-XP-epa">
+                                        <rect key="frame" x="0.0" y="0.0" width="342" height="180"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProductImage" translatesAutoresizingMaskIntoConstraints="NO" id="9xR-K8-uf1">
+                                                <rect key="frame" x="110" y="0.0" width="122" height="122"/>
+                                            </imageView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="T-Shirt" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vq5-I3-w6P">
+                                                <rect key="frame" x="128" y="130" width="86" height="50"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="180" id="kmO-R9-Ay6"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="Zev-3g-6U9">
+                                        <rect key="frame" x="0.0" y="196" width="342" height="360"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oAv-pI-GrN">
+                                                <rect key="frame" x="0.0" y="0.0" width="342" height="63"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="63" id="wXo-ak-iSl"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="tinted" title="Add To Cart"/>
+                                                <connections>
+                                                    <action selector="addToCartButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="wpQ-qK-0S1"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiK-SR-ICR">
+                                                <rect key="frame" x="0.0" y="99" width="342" height="63"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="tinted" title="Purchase"/>
+                                                <connections>
+                                                    <action selector="purchaseButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="ZGF-RD-AUi"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oL8-3x-dTc">
+                                                <rect key="frame" x="0.0" y="198" width="342" height="63"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="tinted" title="Send Custom Event"/>
+                                                <connections>
+                                                    <action selector="customEventButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="CaV-GA-xkL"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-jl-cmP" userLabel="Add To Cart with Deeplink">
+                                                <rect key="frame" x="0.0" y="297" width="342" height="63"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="tinted" title="Add To Cart with Deeplink"/>
+                                                <connections>
+                                                    <action selector="addToCartWithDeeplinkButtonPressed:" destination="Xj3-Ru-nwo" eventType="touchUpInside" id="06j-W6-5HX"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KyE-6k-rz2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KyE-6k-rz2" firstAttribute="trailing" secondItem="pId-os-gqS" secondAttribute="trailing" constant="36" id="3qv-hS-kpv"/>
+                            <constraint firstItem="pId-os-gqS" firstAttribute="centerX" secondItem="KyE-6k-rz2" secondAttribute="centerX" id="8Wb-r3-0QI"/>
+                            <constraint firstItem="pId-os-gqS" firstAttribute="top" secondItem="KyE-6k-rz2" secondAttribute="top" priority="999" id="Bzl-W3-Wz1"/>
+                            <constraint firstItem="KyE-6k-rz2" firstAttribute="bottom" secondItem="pId-os-gqS" secondAttribute="bottom" priority="999" id="ILO-JJ-ljv"/>
+                            <constraint firstItem="pId-os-gqS" firstAttribute="leading" secondItem="KyE-6k-rz2" secondAttribute="leading" constant="36" id="MJ3-FE-55x"/>
+                            <constraint firstItem="pId-os-gqS" firstAttribute="centerY" secondItem="KyE-6k-rz2" secondAttribute="centerY" id="VZQ-ac-khU"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Product" image="cart.fill" catalog="system" id="Kez-RS-Jz1"/>
                     <navigationItem key="navigationItem" id="gu9-Nv-e2w"/>
