--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -158,28 +158,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pId-os-gqS">
-                                <rect key="frame" x="36" y="152.5" width="342" height="556"/>
+                                <rect key="frame" x="36" y="78" width="342" height="476"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b6b-XP-epa">
-                                        <rect key="frame" x="0.0" y="0.0" width="342" height="180"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b6b-XP-epa">
+                                        <rect key="frame" x="0.0" y="0.0" width="342" height="160"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProductImage" translatesAutoresizingMaskIntoConstraints="NO" id="9xR-K8-uf1">
-                                                <rect key="frame" x="110" y="0.0" width="122" height="122"/>
+                                                <rect key="frame" x="110" y="0.0" width="122" height="129.5"/>
                                             </imageView>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="T-Shirt" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vq5-I3-w6P">
-                                                <rect key="frame" x="128" y="130" width="86" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <color key="textColor" systemColor="labelColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                            </textView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rcE-kP-CJk">
+                                                <rect key="frame" x="145" y="137.5" width="52.5" height="22.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="180" id="kmO-R9-Ay6"/>
+                                            <constraint firstAttribute="height" constant="160" id="EWh-qg-xc9"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="Zev-3g-6U9">
-                                        <rect key="frame" x="0.0" y="196" width="342" height="360"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Zev-3g-6U9">
+                                        <rect key="frame" x="0.0" y="176" width="342" height="300"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oAv-pI-GrN">
                                                 <rect key="frame" x="0.0" y="0.0" width="342" height="63"/>
@@ -193,7 +192,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiK-SR-ICR">
-                                                <rect key="frame" x="0.0" y="99" width="342" height="63"/>
+                                                <rect key="frame" x="0.0" y="79" width="342" height="63"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="tinted" title="Purchase"/>
                                                 <connections>
@@ -201,7 +200,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oL8-3x-dTc">
-                                                <rect key="frame" x="0.0" y="198" width="342" height="63"/>
+                                                <rect key="frame" x="0.0" y="158" width="342" height="63"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="tinted" title="Send Custom Event"/>
                                                 <connections>
@@ -209,7 +208,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1u-jl-cmP" userLabel="Add To Cart with Deeplink">
-                                                <rect key="frame" x="0.0" y="297" width="342" height="63"/>
+                                                <rect key="frame" x="0.0" y="237" width="342" height="63"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="tinted" title="Add To Cart with Deeplink"/>
                                                 <connections>
@@ -226,10 +225,9 @@
                         <constraints>
                             <constraint firstItem="KyE-6k-rz2" firstAttribute="trailing" secondItem="pId-os-gqS" secondAttribute="trailing" constant="36" id="3qv-hS-kpv"/>
                             <constraint firstItem="pId-os-gqS" firstAttribute="centerX" secondItem="KyE-6k-rz2" secondAttribute="centerX" id="8Wb-r3-0QI"/>
-                            <constraint firstItem="pId-os-gqS" firstAttribute="top" secondItem="KyE-6k-rz2" secondAttribute="top" priority="999" id="Bzl-W3-Wz1"/>
+                            <constraint firstItem="pId-os-gqS" firstAttribute="top" secondItem="KyE-6k-rz2" secondAttribute="top" constant="30" id="Bzl-W3-Wz1"/>
                             <constraint firstItem="KyE-6k-rz2" firstAttribute="bottom" secondItem="pId-os-gqS" secondAttribute="bottom" priority="999" id="ILO-JJ-ljv"/>
                             <constraint firstItem="pId-os-gqS" firstAttribute="leading" secondItem="KyE-6k-rz2" secondAttribute="leading" constant="36" id="MJ3-FE-55x"/>
-                            <constraint firstItem="pId-os-gqS" firstAttribute="centerY" secondItem="KyE-6k-rz2" secondAttribute="centerY" id="VZQ-ac-khU"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Product" image="cart.fill" catalog="system" id="Kez-RS-Jz1"/>
@@ -249,9 +247,6 @@
         <image name="ProductImage" width="122" height="122"/>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
